lab1/Test/L1-A-10-74.cmm
struct W71zvL {
};
int kkMPeCb3K ( int tStR , int yLglv1fjiTWwmS ) {
  struct {
    struct b7h4jV LgiXwDP0Bs ;
    int X ;
    int  fzVri91rfXis ;
  }TaGikEZEBU2tM2ad_3 ( ;
  struct BsiW_CBBiWmYJL JrfYraghtw ;
  int o ;
  int la6QL3kPeHifNN7Pheq4 ;
  int p7m04uBoNAf0PGA7jtu ;
  if ( zOkSnPuNIV6pkiF )   if ( ju )   HXaFJZJw1SasO2Qnk 
    ;
else   if ( ig4lsXTF )   wchQNY4aXuWJ14HT3jg ;
else   while ( ybl5TqYLr5a )   XuANaRG0bxBmEqLHn ;



else   if ( CAKGs5X3GJTQnaBvR )   if ( gyiml9wwzLEI_EXyl 
    )   return z_hb8Qnl0 ;
else   while ( ZPTUR6FEXv5W )   f0xNcxlT8l1e 2030709691 
    ;




}
int ;
struct Ws7mEocHBt ;
int ;
struct brCcyYE7 SHcVuFR5nFwzExM4eYnD ( ) {
  int LyFNVaz6 ;
  int W6 struct ;
  struct RYyE40S2pXRb15Ddor S29DQ7Gj ;
{
    float dtXhc9H3y_9Ne , ZZ [ 2040446179 ] = AAvgrphY5Nsk 
      = MpyiIF3X5UuF2xr || nJSV_q7O3OyWv6bISTr >= DT4e6cyEB 
      * ! ! F [ mnQT5uvO7m = O_ && vOavqx + ovY ( T8OtXFg40U3hfh 
      > F34IqVDPj42Ul2a3k - FBETINqs2y * ( yvuGDEjSWShTh6AvqnX 
      || TFqp_t == hAEfYP1ic5jmQRbiws ( gzUjClt , tZn571X 
      && adD5IfON7cfx < rvZlFSyr - ( hQi8aW6QDWPWs7PP = 
      pPuaZi || Ctd <= KjHRc2STEWKAG `) * 1025072970 . _B 
      - H3h5CUW8MT != 535747169.285121173 ) ) . dPZru_7fKOPEUF 
      ) ] / - CcQHzrzPJtbn1dBh ( ) ;
  }}
int yY 
;
int mzzqrx140l1I0m , k00mRGEyHg3 

;
